--- a/styles.css
+++ b/styles.css
@@ -59,3 +59,76 @@ a.aggregation-title {
 a.aggregation-title:hover {
   text-decoration: none;
 }
+
+
+/* Detail and Preview Modal */
+.modal-fade-enter,
+.modal-fade-leave-to {
+  opacity: 0;
+}
+.modal-fade-enter-active,
+.modal-fade-leave-active {
+  transition: opacity .3s ease;
+}
+.nugget-modal-backdrop {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background-color: rgba(0, 0, 0, 0.3);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 2;
+}
+.nugget-modal {
+  overflow-x: auto;
+  display: flex;
+  height: 50%;
+  width: 50%;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  background: #FFFFFF;
+  box-shadow: 2px 2px 20px 1px;
+  border-radius: 5px;
+  flex-direction: column;
+  transform: translate(-50%, -50%);
+}
+@media (max-width: 1250px) {
+  .nugget-modal {
+    height: 75%;
+    width: 75%;
+  }
+}
+.nugget-modal-header {
+  padding: 15px 15px 0 15px;
+  display: flex;
+  border-bottom: 1px solid #eeeeee;
+  justify-content: space-between;
+  position: relative;
+}
+.btn-close {
+  position: absolute;
+  top: 0;
+  right: 0;
+  border: none;
+  font-size: 20px;
+  padding: 10px;
+  cursor: pointer;
+  font-weight: bold;
+  color: #999999;
+  background: transparent;
+}
+.nugget-modal-body {
+  overflow-y: auto;
+  position: relative;
+  padding: 0;
+}
+.h-100 {
+  height: 100%;
+}
+.w-100 {
+  width: 100%;
+}
