add new class for style

--- a/styles.css
+++ b/styles.css
@@ -16,6 +16,9 @@
 .nugget-post-selection {
   margin-bottom: 20px !important;
 }
+.nugget-post-select {
+  cursor: pointer;
+}
 .nugget-post {
   border-radius: 5px;
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
@@ -175,4 +178,7 @@ a.aggregation-title:hover {
 }
 .preview-iframe {
   border: none !important;
+}
+.DetailModal {
+  display: none;
 }
