--- a/styles.css
+++ b/styles.css
@@ -73,6 +73,45 @@ div.separator {
   margin-top: 15px;
 }
 
+.hide-authors {
+  display: none;
+}
+.show-more {
+  margin-left: 10px;
+}
+
+
+
+.related-domains-list {
+  margin: 0;
+  padding: 0;
+}
+.related-domains-list-element {
+  list-style-type: none;
+  padding-left: 0;
+}
+.related-domains-checkbox {
+  cursor: pointer;
+}
+.related-domains-label {
+  cursor: pointer;
+  margin: 0;
+  padding: 0;
+  /*
+  border-radius: 0.25rem;
+  padding: 5px 0px;
+  text-transform: uppercase;
+  font-size: 10px;
+  font-weight: 500;
+  line-height: 1;
+  text-align: center;
+  vertical-align: baseline;
+  color: black;
+  */
+}
+
+
+
 .md-layout {
   margin: 0;
 }
