--- a/styles.css
+++ b/styles.css
@@ -65,10 +65,12 @@ Modal style
   z-index: 2;
 }
 .nugget-modal {
+  font-family: "Open Sans";
   overflow-x: auto;
   display: flex;
-  height: 50%;
-  width: 50%;
+  height: auto;
+  max-height: 90%;
+  max-width: 75%;
   position: absolute;
   left: 50%;
   top: 50%;
@@ -77,6 +79,9 @@ Modal style
   border-radius: 5px;
   flex-direction: column;
   transform: translate(-50%, -50%);
+}
+.nugget-modal h3 {
+  font-family: "Open Sans Condensed";
 }
 @media (max-width: 1250px) {
   .nugget-modal {
@@ -106,16 +111,21 @@ Modal style
 .nugget-modal-body {
   overflow-y: auto;
   position: relative;
-  padding: 0;
+  padding: 10px 0px;
 }
 .metadata_field {
   margin: 0 15px !important;
 }
 .metadata_list {
-  list-style: none
+  list-style: none;
+  padding-left: 5px;
 }
 .metadata_list_item {
   margin-left: 30px;
+}
+.metadata_list_item .badge {
+  white-space: normal;
+  max-width: 90%;
 }
 .left_element {
   float: left;
