--- a/styles.css
+++ b/styles.css
@@ -77,7 +77,7 @@ Modal style
   z-index: 2;
 }
 .nugget-modal {
-  font-family: "Open Sans";
+  font-family: Open Sans, proxima-nova, nunito, Arial, sans-serif;
   max-height: 90%;
   width: 70%;
   max-width: 1140px;
@@ -91,7 +91,7 @@ Modal style
   transform: translate(-50%, -50%);
 }
 .nugget-modal h2, .nugget-modal h3 {
-  font-family: "Open Sans Condensed";
+  font-family: Open Sans Condensed, Open Sans, proxima-nova, nunito, Arial, sans-serif;
 }
 @media (max-width: 1250px) {
   .nugget-modal {
@@ -299,4 +299,9 @@ Other style
 }
 .w-100 {
   width: 100%;
+}
+
+/* Logo fix (for Moodle 4) */
+:root {
+  --activityother: #399be2;
 }
