fix graphics bugs

--- a/styles.css
+++ b/styles.css
@@ -7,9 +7,6 @@ Nugget Post
 .nugget-post-selection {
   margin-bottom: 20px !important;
 }
-.nugget-post-select {
-  cursor: pointer;
-}
 .nugget-post-selected {
   background: #A6C3FE;
 }
@@ -42,16 +39,18 @@ Nugget Post
 .nugget-button {
   margin-right: 5px !important;
 }
+.nugget-button-selection {
+  padding: 0 5px 0 5px !important;
+}
+.nugget-button:focus {
+  outline: none !important;
+  box-shadow: none !important;
+}
 /* Load more nugget */
 .show-more-nugget {
   margin-left: 25px;
   margin-bottom: 20px;
 }
-.show-more-nugget-button:focus {
-  outline: none !important;
-  box-shadow: none !important;
-}
-
 
 /******************************
 Modal style
